# funnel

./: LICENSE  README.md  main.py  pyproject.toml  setup.cfg
src/funnel/: __init__.py  core.py
tests/: test_core.py
