[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "funnel"
description = "Pouring functions into the Falsk API"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.7"
dependencies = [
    "flask-restx~=1.1"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "mypy",
    "black",
    "isort"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "funnel.__version__"}

[tools.black]
line-length = 80

[tool.isort]
profile = "black"

[tools.flake8]
max-line-length = 80
